<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="generic_network_error">Error: Try again later</string>

    <!-- Launcher fragment -->
    <string name="representative_button_text">Find my representatives</string>
    <string name="upcoming_button_text">Upcoming elections</string>
    <string name="content_description_ballot_logo">Ballot image</string>

    <!-- Elections fragment -->
    <string name="upcoming_elections_header">Upcoming elections</string>
    <string name="saved_elections_header">Saved elections</string>

    <!-- Voter Info fragment -->
    <string name="election_information_header">Election Information</string>
    <string name="voting_location">Voting Location</string>
    <string name="extra_info">Extra Information</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="address_information">Address Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="election_not_found_error">Error: Election not found</string>

    <!-- Representative fragment -->
    <string name="representative_search_header">Representative Search</string>
    <string name="my_representative_header">My Representatives</string>
    <string name="address_line_1_hint">Address Line 1</string>
    <string name="address_line_2_hint">Address Line 2</string>
    <string name="city_hint">City</string>
    <string name="zip_hint">Zip</string>
    <string name="find_my_representatives_button">Find my representatives</string>
    <string name="use_my_location_button">Use my location</string>
    <string name="representatives_not_found_error">Error: Representatives not found</string>
    <string name="representatives_picture_content_description">Representative picture</string>
    <string name="facebook_icon_content_description">Facebook icon</string>
    <string name="twitter_icon_content_description">Twitter picture</string>
    <string name="web_icon_content_description">Web picture</string>
    <string name="no_location_permission_error">It is necessary to give location permission to use this feature</string>
    <string name="get_location_error">Please, enable your location to use this feature</string>

</resources>
