<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_half_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.voterInfo != null ? viewModel.voterInfo.election.name : ``}"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/election_date"
            style="@style/ElectionInformationBody"
            android:layout_margin="@dimen/default_half_padding"
            android:text="@{viewModel.voterInfo != null ? viewModel.voterInfo.election.electionDay.toString() : ``}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            style="@style/ElectionInformationHeader"
            android:text="@string/election_information_header"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <!-- TODO: Add click binding to open web URL -->
        <TextView
            android:id="@+id/state_locations"
            style="@style/ElectionInformationBody"
            android:text="@string/voting_location"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <!-- TODO: Add click binding to open web URL -->
        <TextView
            android:id="@+id/state_ballot"
            style="@style/ElectionInformationBody"
            android:text="@string/ballot_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.voterAddress != `` ? View.VISIBLE : View.GONE}"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/ElectionInformationHeader"
            android:text="@string/address_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <TextView
            android:id="@+id/address"
            style="@style/ElectionInformationBody"
            android:text="@{viewModel.voterAddress}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />

        <Button
            android:id="@+id/saveButton"
            style="@style/DefaultButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:text="@{viewModel.isDbSaved ? @string/unfollow_election : @string/follow_election}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Follow election" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>